[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MemLib"
version = "1.7.4"
description = "Library to interact with the Windows API and ctypes."
authors = [
    { name="Zvendson" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
dependencies = [
    "psutil ~=5.9.6",
    "pykeepass ~=4.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]
keywords = ["windows", "api", "ctypes", "memory", "keepass"]
